fixing collapse button

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,9 @@
                     <img src="{% static "img/niqels-logo-hor.png" %}" class="brand-logo">
                 </a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                    <i class="fa fa-bars fa-lg"></i>
+                    <i class="icon icon-bar"></i>
+                    <i class="icon icon-bar"></i>
+                    <i class="icon icon-bar"></i>
                 </button>
             </div>
 
