--- a/templates/landing.html
+++ b/templates/landing.html
@@ -42,9 +42,9 @@
                 <div class="navbar-header">
                     <a class="" href="#"><img src="{% static "img/niqels-rgb.png" %}" id="logo"></a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-links">
-                        <span class="fa fa-bar"></span>
-                        <span class="fa fa-bar"></span>
-                        <span class="fa fa-bar"></span>
+                        <span class="icon icon-bar"></span>
+                        <span class="icon icon-bar"></span>
+                        <span class="icon icon-bar"></span>
                     </button>
                 </div> <!-- .navbar-header -->
 
