--- a/templates/access/change_password.html
+++ b/templates/access/change_password.html
@@ -3,6 +3,8 @@
 {% load i18n %}
 
 {% block body %}
+
+<h2 class="area-header">{% trans "Password change" %}</h2>
     
 <div class="panel panel-default center-panel">
     <div class="panel-body">
