--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -7444,49 +7444,6 @@ body {
 .ng-cloak {
   display: none !important;
 }
-.affix {
-  top: 20px;
-  width: 230px;
-}
-.center-form {
-  width: 300px;
-  margin: 0 auto;
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 0px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-.center-form blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
-span.category-label {
-  display: inline;
-  padding: .2em .6em .3em;
-  font-size: 75%;
-  font-weight: bold;
-  line-height: 1;
-  color: #ffffff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: .25em;
-  padding: 4px 6px;
-  font-weight: normal;
-}
-span.category-label[href]:hover,
-span.category-label[href]:focus {
-  color: #ffffff;
-  text-decoration: none;
-  cursor: pointer;
-}
-span.category-label:empty {
-  display: none;
-}
 /*
  * /GLOBAL STYLES
  */
@@ -7495,21 +7452,14 @@ span.category-label:empty {
   margin-top: 25px;
   margin-bottom: 25px;
 }
-.modal .modal-header {
-  background-color: #807f88;
-  color: #FFF;
-}
-.modal .modal-header .close {
-  color: #FFF;
-}
-.modal .modal-footer {
-  background-color: #e6e4eb;
-}
 .center-panel {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  background-color: #fdfdfd;
+  border-style: solid;
+  box-shadow: 0 0 3px #ccc;
 }
 @media (min-width: 1200px) {
   .center-panel {
