--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -11,6 +11,8 @@
 @import "charts.less";
 @import "../forms.less";
 @import "transaction-list.less";
+@import "../components/option-panel.less";
+@import "reports.less";
 
 html, body, .container, .row {
     height: 100%;
