--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -10,7 +10,7 @@
          
         <h4 class="area-header">{% trans "Transactions" %} <a data-toggle="collapse" data-target="#transaction-list-options"><i class="fa fa-gear"></i></h4></a>
 
-        <div id="transaction-list-options" class="panel panel-default collapse">
+        <div id="transaction-list-options" class="panel panel-default options-panel collapse">
             <div class="panel-body">
                 <ul class="list-inline option">
                     <li>{% trans "Group transactions by:" %}</li>
