--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -13,19 +13,37 @@
 </div>
 
 
-<div class="content-column" ng-controller="ReportsCtrl">
-    <div class="month-selector">
-        {% trans "Period" %}: 
-        <button class="btn btn-link actual-month" id="date-start" month-selector="options.dateStart"></button>
-        /
-        <button class="btn btn-link actual-month" id="date-end" month-selector="options.dateEnd"></button>
-        <button class="btn btn-small btn-primary"
-            ng-click="updateCharts()"
-            track="click,Reports,update-period"
+<div class="content-column" ng-controller="ReportsCtrl" id="reports">
+    <div class="col-md-4 col-md-offset-4 form-group">
+        <label for="id_category" class="form-label">{% trans "Period" %}</label>
+        <select
+            id="period"
+            name="period"
+            class="form-control"
+
+            ng-model="period"
+            category-field
+
+            ng-options="p.value as p.name for p in queryPeriods"
             >
-            {% trans "Update" %}&nbsp;
-            <i class="fa fa-refresh"></i>
-        </button>
+        </select>
+    </div>
+    <div class="clearfix"></div>
+    <div id="custom-period-panel" class="panel panel-default options-panel collapse in">
+        <div class="panel-body">
+            <div class="month-selector">
+                <button class="btn btn-link actual-month" id="date-start" month-selector="options.dateStart"></button>
+                /
+                <button class="btn btn-link actual-month" id="date-end" month-selector="options.dateEnd"></button>
+                <button class="btn btn-small btn-primary"
+                    ng-click="updateCharts()"
+                    track="click,Reports,update-period"
+                    >
+                    {% trans "Update" %}&nbsp;
+                    <i class="fa fa-refresh"></i>
+                </button>
+            </div>
+        </div>
     </div>
 
     <div ui-view></div>
