choosing period working

--- a/static/less/webapp/reports.less
+++ b/static/less/webapp/reports.less
@@ -1,4 +1,12 @@
 #reports {
+    #period-form {
+        .make-sm-column(6);
+        margin: auto;
+        float: none !important;
+    }
+
     #custom-period-panel {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
