changing buttons to links on custom period

--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -128,10 +128,18 @@ a[data-toggle="collapse"] {
 .month-selector {
     text-align: center;
 
-    .btn {
+    button.btn {
         margin-left: 5px !important;
         margin-right: 5px !important;
         box-shadow: 1px 1px 1px #ccc;
+    }
+
+    a {
+        font-weight: bold;
+        text-decoration: underline;
+        cursor: pointer;
+        margin-left: 5px;
+        margin-right: 5px;
     }
 }
 
