--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -43,9 +43,9 @@
         <div class="panel-body">
             <div class="month-selector">
                 {% trans "Show data between" %}
-                <button class="btn btn-link actual-month" id="date-start" month-selector="customPeriod.dateStart"></button>
+                <a class="actual-month" id="date-start" month-selector="customPeriod.dateStart"></a>
                 {% trans "and" %}
-                <button class="btn btn-link actual-month" id="date-end" month-selector="customPeriod.dateEnd"></button>
+                <a class="actual-month" id="date-end" month-selector="customPeriod.dateEnd"></a>
             </div>
         </div>
     </div>
