--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -7234,10 +7234,17 @@ a[data-toggle="collapse"] {
 .month-selector {
   text-align: center;
 }
-.month-selector .btn {
+.month-selector button.btn {
   margin-left: 5px !important;
   margin-right: 5px !important;
   box-shadow: 1px 1px 1px #ccc;
+}
+.month-selector a {
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 .loading-spinner {
   width: 100%;
