updating ui-router

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -75,7 +75,7 @@
         <script src="{{lib}}min/angular.min.js"></script>
         <script src="{{lib}}min/angular-resource.min.js"></script>
         <script src="{{lib}}angular-strap.js"></script>
-        <script src="{{lib}}angular-ui-router.js"></script>
+        <script src="{{lib}}min/angular-ui-router.min.js"></script>
         <script src="{{lib}}highcharts.src.js"></script>
         <script src="{{lib}}bootstrap-datepicker.js"></script>
         <script src="{{lib}}jquery.maskMoney.js"></script>
