--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -1,6 +1,7 @@
 @import "../lib/bootstrap/bootstrap.less";
 @import "../lib/typeahead.less";
-@import (less) "../lib/datepicker.css";
+//@import (less) "../lib/datepicker.css";
+@import "../lib/datepicker3.less";
 @import "../datepicker-override.less";
 @import "../toastr-override.less";
 
