--- a/static/less/datepicker-override.less
+++ b/static/less/datepicker-override.less
@@ -1,31 +1,46 @@
 @import "variables.less";
 
 .datepicker {
+
+    &.datepicker-inline {
+        width: 100%;
+    }
+
+    table {
+        width: 100%;
+
+        td, th, .active, .today, tr > td > span {
+            border-radius: @border-radius-base !important;
+        }
+
+        tr td {
+            &.today {
+                background-color: inherit;
+                box-shadow: inset 0px 0px 0px 1px @brand-primary;
+            }
+            &.active {
+                background-color: @brand-primary !important;
+                background-image: none !important;
+
+                &:hover {
+                    background-color: darken(@brand-primary, 10%) !important;
+                }
+            }
+        }
+
+        thead th.datepicker-switch {
+            font-style: normal !important;
+        }
+    }
+
     font-size: 12px;
     border: 1px solid @input-border;
 	border-radius: @border-radius-base !important;
-
-    td, th, .active, .today, tr > td > span {
-        border-radius: @border-radius-base !important;
-    }
 
     background-color: @input-bg;
 
     &:before {
         visibility: hidden;
-    }
-
-    td.active {
-        background-color: @brand-primary !important;
-        background-image: none !important;
-
-        &:hover {
-            background-color: darken(@brand-primary, 10%) !important;
-        }
-    }
-
-    thead th.datepicker-switch {
-        font-style: normal !important;
     }
 
     &.datepicker-dropdown {
