--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -4,7 +4,7 @@
     i.input-icon-prepend, i.input-icon-append {
         z-index: 10;
         position: absolute;
-        bottom: (@padding-base-vertical + 1); //padding + border
+        bottom: (@padding-base-vertical + 3); //padding + border
     }
 
     i.input-icon-prepend {
@@ -24,21 +24,21 @@
               left: (@grid-gutter-width / 2) + 10;
         }
     }
+
+    .bootstrap-select {
+        width: 100% !important;
+        margin-bottom: 0 !important;
+
+        .filter-option {
+            margin-left: 20px !important;
+        }
+    }
 }
 
 i.input-error {
     color: @state-danger-text;
 }
 
-#transaction-form .bootstrap-select {
-    width: 100% !important;
-    margin-bottom: 0 !important;
-
-    .filter-option {
-        font-weight: normal;
-        margin-left: 20px !important;
-    }
-}
 
 .bootstrap-select {
     .btn.dropdown-toggle {
