--- a/templates/webapp/reports/category-comparison.html
+++ b/templates/webapp/reports/category-comparison.html
@@ -3,33 +3,37 @@
 <h4 class="area-header">{% trans "Category Comparison" %}</h4>
 
 <div class="row">
-    <div class="col-md-6 category1 input-icon">
+    <div class="col-md-6 category1">
         <label for="category1" class="form-label">{% trans "Category 1" %}</label>
-        <i class="fa fa-tag input-icon-prepend"></i>
-        <select
-            id="category1"
-            class="form-control"
+            <div class="input-icon">
+            <i class="fa fa-tag input-icon-prepend"></i>
+            <select
+                id="category1"
+                class="form-control"
 
-            ng-model="category1"
-            category-field
+                ng-model="category1"
+                category-field
 
-            ng-options="c as c.name group by c.group for c in categories"
-            >
-        </select>
+                ng-options="c as c.name group by c.group for c in categories"
+                >
+            </select>
+        </div>
     </div>
-    <div class="col-md-6 category2 input-icon">
+    <div class="col-md-6 category2">
         <label for="category2" class="form-label">{% trans "Category 2" %}</label>
-        <i class="fa fa-tag input-icon-prepend"></i>
-        <select
-            id="category2"
-            class="form-control"
+        <div class="input-icon">
+            <i class="fa fa-tag input-icon-prepend"></i>
+            <select
+                id="category2"
+                class="form-control"
 
-            ng-model="category2"
-            category-field
+                ng-model="category2"
+                category-field
 
-            ng-options="c as c.name group by c.group for c in categories"
-            >
-        </select>
+                ng-options="c as c.name group by c.group for c in categories"
+                >
+            </select>
+        </div>
     </div>
 </div>
 
