starting hashtag support

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -101,6 +101,7 @@
         <script src="{{app}}modules/charts.js"></script>
         <script src="{{app}}modules/models.js"></script>
         <script src="{{app}}modules/ga.js"></script>
+        <script src="{{app}}modules/hashtags.js"></script>
 
         <script src="{{app}}directives.js"></script>
 
