--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -1,6 +1,5 @@
 @import "../lib/bootstrap/bootstrap.less";
 @import "../lib/typeahead.less";
-//@import (less) "../lib/datepicker.css";
 @import "../lib/datepicker3.less";
 @import "../datepicker-override.less";
 @import "../toastr-override.less";
@@ -12,8 +11,11 @@
 @import "charts.less";
 @import "../forms.less";
 @import "transaction-list.less";
-@import "../components/option-panel.less";
 @import "reports.less";
+
+@import "../components/option-panel.less";
+@import "../components/hashtags.less";
+
 
 html, body, .container, .row {
     height: 100%;
