--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -74,6 +74,7 @@
 
         <script src="{{lib}}min/angular.min.js"></script>
         <script src="{{lib}}min/angular-resource.min.js"></script>
+        <script src="{{lib}}min/angular-animate.min.js"></script>
         <script src="{{lib}}angular-strap.js"></script>
         <script src="{{lib}}min/angular-ui-router.min.js"></script>
         <script src="{{lib}}highcharts.src.js"></script>
@@ -96,6 +97,7 @@
         <script src="{{controllers}}category-list-ctrl.js"></script>
         <script src="{{controllers}}category-edit-ctrl.js"></script>
         <script src="{{controllers}}reports-ctrl.js"></script>
+        <script src="{{controllers}}installment-form-ctrl.js"></script>
 
         <script src="{{app}}services.js"></script>
         <script src="{{app}}modules/charts.js"></script>
@@ -111,6 +113,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular-resource.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.3/angular-animate.min.js"></script>
 
     <script src="{% static "js/webapp.min.js" %}"></script>
 
