--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -8,7 +8,7 @@
 
     <div id="transaction-list-panel" class="content-main" ng-controller="TransactionListCtrl">
          
-        <h4 class="area-header">{% trans "Transactions" %} <a data-toggle="collapse" data-target="#transaction-list-options"><i class="fa fa-gear"></i></h4></a>
+        <h4 class="area-header">{% trans "Transactions" %} <a data-toggle="collapse" data-target="#transaction-list-options"><i class="fa fa-gear"></i></a></h4>
 
         <div id="transaction-list-options" class="panel panel-default options-panel collapse">
             <div class="panel-body">
