--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -35,7 +35,7 @@
             ></i>
     </div>
 
-    <div class="form-group input-icon">
+    <div class="form-group input-icon animate-show" ng-hide="is_installment">
         <label for="id_value" class="form-label">{% trans "Value" %}</label>
         <i class="fa fa-dollar input-icon-prepend"></i>
         <input
@@ -51,14 +51,48 @@
             autocomplete="off"
             />
     </div>
-    <div class="checkbox" ng-controller="InstallmentFormCtrl">
+    <div class="checkbox">
         <input
             type="checkbox"
             ng-model="is_installment"
             ng-false-value="false"
             ng-true-value="true"
             ng-change="selectInstallment()"
-            >{% trans "Esta é uma compra parcelada" %} <a>(editar)</a>
+            >{% trans "Esta é uma compra parcelada" %}
+    </div>
+    <div ng-show="is_installment" ng-controller="InstallmentFormCtrl" class="animate-show">
+        <div class="form-group input-icon">
+            <label for="id_value" class="form-label">{% trans "Installment value" %}</label>
+            <i class="fa fa-dollar input-icon-prepend"></i>
+            <input
+                id="id_value"
+                name="value"
+                class="form-control"
+
+                ng-model="formData.value"
+                value-field
+
+                required
+
+                autocomplete="off"
+                />
+        </div>
+        <div class="form-group input-icon">
+            <label for="id_value" class="form-label">{% trans "Total value" %}</label>
+            <i class="fa fa-dollar input-icon-prepend"></i>
+            <input
+                id="id_total_value"
+                name="total-value"
+                class="form-control"
+
+                ng-model="total_value"
+                value-field
+
+                required
+
+                autocomplete="off"
+                />
+        </div>
     </div>
 
     <div class="form-group input-icon">
