--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -39,6 +39,9 @@ i.input-error {
     color: @state-danger-text;
 }
 
+input.ng-invalid.ng-dirty {
+    .has-error();
+}
 
 .bootstrap-select {
     .btn.dropdown-toggle {
@@ -51,17 +54,27 @@ i.input-error {
 }
 
 .animate-show {
-    transition: all linear 0.5s;
-    max-height: 3000px;
+    transition: all linear 0.2s;
+    transition-delay: 0.2s;
     opacity: 1;
+    overflow: hidden;
+
+    &-normal {
+        max-height: 60px;
+    }
+
+    &-tall {
+        max-height: 200px;
+    }
 
     &.ng-hide-add, &.ng-hide-remove {
         display: block !important;
     }
 
     &.ng-hide {
+        transition: all linear 0.2s;
         opacity: 0;
-        height: 0px;
+        max-height: 0px;
         overflow: hidden;
     }
 }
