--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -113,7 +113,7 @@
             ng-false-value="false"
             ng-true-value="true"
             ng-change="selectInstallment()"
-            >{% trans "Esta é uma compra parcelada" %}
+            >{% trans "This is an installment purchase" %}
     </div>
 
     <div class="form-group input-icon">
