new dynamics on the form

--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -39,72 +39,20 @@
         <label for="id_value" class="form-label">{% trans "Value" %}</label>
         <i class="fa fa-dollar input-icon-prepend"></i>
         <input
-            id="id_value"
-            name="value"
-            class="form-control"
-
-            ng-model="formData.value"
-            value-field
-
-            required
-
-            autocomplete="off"
-            />
-    </div>
-
-    <div ng-show="is_installment" ng-controller="InstallmentFormCtrl" class="animate-show animate-show-tall" ng-form="installment-form">
-        <div class="form-group input-icon">
-            <label for="id_value" class="form-label">{% trans "Installment value" %}</label>
-            <i class="fa fa-dollar input-icon-prepend"></i>
-            <input
                 id="id_value"
                 name="value"
                 class="form-control"
 
-                ng-model="installment.installmentValue"
-                ng-required="is_installment"
-                ng-change="updateInstallmentValue()"
+                ng-model="formData.value"
                 value-field
 
-                autocomplete="off"
-                />
-        </div>
-        <div class="form-group input-icon">
-            <label for="id_total_value" class="form-label">{% trans "Total value" %}</label>
-            <i class="fa fa-dollar input-icon-prepend"></i>
-            <input
-                id="id_total_value"
-                name="total-value"
-                class="form-control"
-
-                ng-model="installment.totalValue"
-                ng-change="updateTotalValue()"
-                value-field
-
-                ng-required="is_installment"
+                required
 
                 autocomplete="off"
                 />
-        </div>
-        <div class="form-group input-icon">
-            <label for="id_qty_installments" class="form-label">{% trans "Number of installments" %}</label>
-            <i class="fa fa-calendar-o input-icon-prepend"></i>
-            <input
-                id="id_qty_installments"
-                name="qty-installments"
-                class="form-control"
-                type="number"
-                min="1"
-
-                ng-model="installment.qtyInstallments"
-                ng-required="is_installment"
-                ng-pattern="/\d+/"
-                ng-change="updateQtyInstallments()"
-
-                autocomplete="off"
-                />
-        </div>
     </div>
+
+    {% include "webapp/transactions/installment-form.html" %}
 
     <div class="checkbox">
         <input
@@ -112,7 +60,6 @@
             ng-model="is_installment"
             ng-false-value="false"
             ng-true-value="true"
-            ng-change="selectInstallment()"
             >{% trans "This is an installment purchase" %}
     </div>
 
