--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -84,6 +84,7 @@
         <script src="{{lib}}min/moment.min.js"></script>
         <script src="{{lib}}bootstrap-select.js"></script>
         <script src="{{lib}}min/modernizr.custom.19405.js"></script>
+        <script src="{{lib}}min/accounting.min.js"></script>
 
         <script src="{{locales}}angular-locale_pt-br.js"></script>
         <script src="{{locales}}bootstrap-datepicker.pt-BR.js"></script>
@@ -104,6 +105,7 @@
         <script src="{{app}}modules/models.js"></script>
         <script src="{{app}}modules/ga.js"></script>
         <script src="{{app}}modules/hashtags.js"></script>
+        <script src="{{app}}modules/accounting.js"></script>
 
         <script src="{{app}}directives.js"></script>
 
