changeover to accounting

--- a/templates/webapp/transactions/installment-form.html
+++ b/templates/webapp/transactions/installment-form.html
@@ -11,7 +11,7 @@
 
                 ng-model="installment.totalValue"
                 ng-change="updateTotalValue()"
-                value-field
+                currency-field
 
                 ng-required="is_installment"
 
@@ -29,7 +29,7 @@
                 ng-model="installment.installmentValue"
                 ng-required="is_installment"
                 ng-change="updateInstallmentValue()"
-                value-field
+                currency-field
 
                 autocomplete="off"
                 />
