--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -44,7 +44,7 @@
                 class="form-control"
 
                 ng-model="formData.value"
-                value-field
+                currency-field
 
                 required
 
