--- a/templates/webapp/transactions/installment-form.html
+++ b/templates/webapp/transactions/installment-form.html
@@ -57,9 +57,11 @@
 
 <div class="checkbox">
     <input
+        id="installment_select"
         type="checkbox"
         ng-model="is_installment"
         ng-false-value="false"
         ng-true-value="true"
-        >{% trans "This is an installment purchase" %}
+        >
+    <label for="installment_select">{% trans "This is an installment purchase" %}</label>
 </div>
