fixing transaction list grouped by date

--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -147,7 +147,7 @@
 
                                 <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
                                     <i
-                                        class="fa fa-trash delete-transaction"
+                                        class="fa fa-trash-o fa-lg delete-transaction"
                                         ng-click="removeTransaction()"
                                         confirmation-needed="{% trans "Do you wish to remove this category?" %}"
                                         data-toggle="tooltip"
