fixing error icon on bs-select

--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -29,6 +29,10 @@
         width: 100% !important;
         margin-bottom: 0 !important;
 
+        & ~ i.input-icon-append {
+            right: 25px;
+        }
+
         .filter-option {
             margin-left: 20px !important;
         }
