opening cateogry on transaction creation, pt1

--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -55,6 +55,7 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a class="accordion-toggle"
+
                             data-toggle="collapse"
                             href="#category(($index))"
                             track="click,Transactions,open-category"
@@ -64,7 +65,7 @@
                     </h4>
                 </div>
 
-                <div id="category(($index))" class="panel-collapse collapse">
+                <div id="category(($index))" class="panel-collapse collapse" category-collapse="group.name">
                     <div class="panel-body">
                         <table class="table table-striped">
                             <thead><tr>
