adding bootstrap tour

--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -1,8 +1,10 @@
 @import "../lib/bootstrap/bootstrap.less";
-@import "../lib/typeahead.less";
+//@import "../lib/typeahead.less";
 @import "../lib/datepicker3.less";
+@import "../lib/bootstrap-tour.less";
 @import "../datepicker-override.less";
 @import "../toastr-override.less";
+
 
 @import "../variables.less";
 @import "category-list.less";
