--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -82,6 +82,7 @@
         <script src="{{lib}}toastr.js"></script>
         <script src="{{lib}}min/moment.min.js"></script>
         <script src="{{lib}}bootstrap-select.js"></script>
+        <script src="{{lib}}bootstrap-tour.js"></script>
         <script src="{{lib}}min/modernizr.custom.19405.js"></script>
         <script src="{{lib}}min/accounting.min.js"></script>
 
