--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -6640,12 +6640,6 @@ td.visible-print {
     display: none !important;
   }
 }
-.typeahead {
-  z-index: 1051;
-  margin-top: 2px;
-  border-radius: 0px;
-  width: 100%;
-}
 /*!
  * Datepicker for Bootstrap
  *
@@ -7405,6 +7399,53 @@ fieldset[disabled] .datepicker table tr td span.active.disabled:hover.active {
   border-width: 1px 0;
   margin-left: -5px;
   margin-right: -5px;
+}
+.tour-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1030;
+  background-color: #000;
+  opacity: 0.8;
+}
+.tour-step-backdrop {
+  position: relative;
+  z-index: 1031;
+  background: inherit;
+}
+.tour-step-background {
+  position: absolute;
+  z-index: 1030;
+  background: inherit;
+  border-radius: 6px;
+}
+.popover[class*="tour-"] {
+  z-index: 1030;
+}
+.popover[class*="tour-"] .popover-navigation {
+  padding: 9px 14px;
+}
+.popover[class*="tour-"] .popover-navigation *[data-role=end] {
+  float: right;
+}
+.popover[class*="tour-"] .popover-navigation *[data-role=prev],
+.popover[class*="tour-"] .popover-navigation *[data-role=next],
+.popover[class*="tour-"] .popover-navigation *[data-role=end] {
+  cursor: pointer;
+}
+.popover[class*="tour-"] .popover-navigation *[data-role=prev].disabled,
+.popover[class*="tour-"] .popover-navigation *[data-role=next].disabled,
+.popover[class*="tour-"] .popover-navigation *[data-role=end].disabled {
+  cursor: default;
+}
+.popover[class*="tour-"].orphan {
+  position: fixed;
+  margin-top: 0;
+}
+.popover[class*="tour-"].orphan .arrow {
+  display: none;
 }
 .datepicker {
   font-size: 12px;
