--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -106,6 +106,7 @@
         <script src="{{app}}modules/ga.js"></script>
         <script src="{{app}}modules/hashtags.js"></script>
         <script src="{{app}}modules/accounting.js"></script>
+        <script src="{{app}}modules/tutorial.js"></script>
 
         <script src="{{app}}directives.js"></script>
 
