--- a/static/less/lib/bootstrap-tour.less
+++ b/static/less/lib/bootstrap-tour.less
@@ -6,20 +6,20 @@
   left: 0;
   z-index: 1030;
   background-color: #000;
-  opacity: 0.8;
+  opacity: 0.3;
 }
 
 .tour-step-backdrop {
   position: relative;
   z-index: 1031;
-  background: inherit;
+  //background: inherit;
 }
 
 .tour-step-background {
-  position: absolute;
+  position:     absolute;
   z-index: 1030;
   background: inherit;
-  border-radius: 6px;
+  border-radius: 0px;
 }
 
 .popover[class*="tour-"] {
