--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -2,7 +2,7 @@
 
 <h4 class="area-header">{% trans "New transaction" %}</h4>
 
-<div ng-controller="TransactionFormCtrl" class="">
+<div ng-controller="TransactionFormCtrl">
     <form
             class="transaction-form"
             name="transactionForm"
