--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -6,7 +6,7 @@
 
 <div class="content-column">
 
-    <div id="transaction-list-panel" class="content-main" ng-controller="TransactionListCtrl">
+    <div id="transaction-list-panel" class="content-main" ng-controller="TransactionListCtrl" show-tutorial="interfaceTutorial">
          
         <h4 class="area-header">{% trans "Transactions" %} <a data-toggle="collapse" data-target="#transaction-list-options"><i class="fa fa-gear"></i></a></h4>
 
