first tutorial and css/html tweaks

--- a/static/less/lib/bootstrap-tour.less
+++ b/static/less/lib/bootstrap-tour.less
@@ -12,7 +12,7 @@
 .tour-step-backdrop {
   position: relative;
   z-index: 1031;
-  //background: inherit;
+  background: inherit;
 }
 
 .tour-step-background {
