--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="left-column">
+<div class="left-column" id="transaction-form-column">
     {% include "webapp/transactions/transaction-form.html" %}
 </div>
 
