--- a/templates/webapp/transactions/month_balance_panel.html
+++ b/templates/webapp/transactions/month_balance_panel.html
@@ -2,7 +2,7 @@
 
 <h4 class="area-header">{% trans "Balance" %}</h4>
 
-<div class="panel panel-default" id="balance-panel">
+<div class="panel panel-default">
     <div ng-controller="BalancePanelCtrl" class="panel-body">
         <div class="balance-info">
             <div id="total-renevues" class="renevues">
