better action buttons for the steops

--- a/static/less/toastr-override.less
+++ b/static/less/toastr-override.less
@@ -14,4 +14,12 @@
 	> :hover {
         .boxShadow(2px 2px 5px #ccc) !important;
     }
+
+    div.action-bar {
+        margin-top: 10px;
+
+        button {
+            margin-right: 5px;
+        }
+    }
 }
