--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -4,6 +4,7 @@
 @import "../lib/bootstrap-tour.less";
 @import "../datepicker-override.less";
 @import "../toastr-override.less";
+@import "../bootstrap-tour-override.less";
 
 
 @import "../variables.less";
