tweaks, cleanup and build

--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -82,3 +82,11 @@ input.ng-invalid.ng-dirty {
         overflow: hidden;
     }
 }
+
+.access-form-panel {
+    .links {
+        a {
+            font-weight: bold;
+        }
+    }
+}
