--- a/templates/access/register.html
+++ b/templates/access/register.html
@@ -4,11 +4,91 @@
 
 {% block body %}
 
-<h2 class="area-header">{% trans "Sign up" %}</h2>
+    <h2 class="area-header">{% trans "Sign up" %}</h2>
 
-<div class="panel panel-default center-panel">
-    <div class="panel-body">
-        {% include "access/forms/register.html" %}
+    <div class="panel panel-default center-panel access-form-panel">
+        <div class="panel-body">
+            <form id="register-form" method="POST" action="{% url "register" %}" class="form-horizontal access-form">{% csrf_token %}
+                <div class="form-group {% if register_form.name.errors %}has-error{% endif %}">
+                    <label class="col-lg-3 control-label" for="name">{% trans "Name" %}</label>
+                    <div class="col-lg-9 input-icon">
+                        <i class="fa fa-user input-icon-prepend"></i>
+                        <input
+                                type="text"
+                                name="name"
+                                class="form-control"
+                                value="{{ register_form.name.value|default_if_none:"" }}"
+                                >
+                        {% for error in register_form.name.errors %}
+                            <span class="help-block error">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="form-group {% if register_form.email.errors %}has-error{% endif %}">
+                    <label class="col-lg-3 control-label" for="email">{% trans "Email" %}</label>
+                    <div class="col-lg-9 input-icon">
+                        <i class="fa fa-envelope input-icon-prepend"></i>
+                        <input
+                                type="email"
+                                name="email"
+                                class="form-control"
+                                value="{{ register_form.email.value|default_if_none:"" }}"
+                                >
+                        {% for error in register_form.email.errors %}
+                            <span class="help-block error">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="form-group {% if register_form.password.errors %}has-error{% endif %}">
+                    <label class="col-lg-3 control-label" for="password">{% trans "Password" %}</label>
+                    <div class="col-lg-9 input-icon">
+                        <i class="fa fa-asterisk input-icon-prepend"></i>
+                        <input
+                                type="password"
+                                name="password"
+                                class="form-control"
+                                value="{{ register_form.password.value|default_if_none:"" }}"
+                                >
+                        {% for error in register_form.password.errors %}
+                            <span class="help-block error">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="form-group {% if register_form.password_confirm.errors %}has-error{% endif %}">
+                    <label class="col-lg-3 control-label" for="password_confirm">{% trans "Confirm password" %}</label>
+                    <div class="col-lg-9 input-icon">
+                        <i class="fa fa-asterisk input-icon-prepend"></i>
+                        <input
+                                type="password"
+                                name="password_confirm"
+                                class="form-control"
+                                value="{{ register_form.password_confirm.value|default_if_none:"" }}"
+                                >
+                        {% for error in register_form.password_confirm.errors %}
+                            <span class="help-block error">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-3 col-lg-9">
+                        <button type="submit" value="{% trans "Sign up" %}" class="btn btn-danger">
+                            {% trans "Sign up" %}
+                            <i class="fa fa-user"></i>
+                        </button>
+                    </div>
+                </div>
+
+            </form>
+
+            <hr>
+
+            <div class="col-lg-offset-3 col-lg-9 links">
+                <p>{% trans "Already a user?" %} <a href="{% url "login" %}">{% trans "Sign in" %}</a></p>
+            </div>
+        </div>
     </div>
-</div>
 {% endblock body %}
